--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": ":vendor_name/:package_name",
-    "description": ":package_description",
+    "name": "binomedev/showcase-services",
+    "description": "A small package for showcasing services of a company.",
     "keywords": [
-        ":vendor_name",
-        ":package_name"
+        "binomedev",
+        "showcase-services"
     ],
-    "homepage": "https://github.com/:vendor_name/:package_name",
+    "homepage": "https://github.com/binomedev/showcase-services",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
+            "name": "Codrin Axinte",
+            "email": "codrin.axinte@outlook.com",
             "role": "Developer"
         }
     ],
@@ -27,13 +27,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Spatie\\Skeleton\\": "src",
-            "Spatie\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Binomedev\\ShowcaseServices\\": "src",
+            "Binomedev\\ShowcaseServices\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Spatie\\Skeleton\\Tests\\": "tests"
+            "Binomedev\\ShowcaseServices\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -47,10 +47,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Spatie\\Skeleton\\SkeletonServiceProvider"
+                "Binomedev\\ShowcaseServices\\ShowcaseServicesServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "Spatie\\Skeleton\\SkeletonFacade"
+                "ShowcaseServices": "Binomedev\\ShowcaseServices\\ShowcaseServicesFacade"
             }
         }
     },
