--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
+        "artesaos/seotools": "^0.20.0",
+        "illuminate/contracts": "^8.0",
         "spatie/laravel-package-tools": "^1.1",
-        "illuminate/contracts": "^8.0"
+        "spatie/laravel-sluggable": "^2.6"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
