--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "artesaos/seotools": "^0.20.0",
         "illuminate/contracts": "^8.0",
         "spatie/laravel-package-tools": "^1.1",
-        "spatie/laravel-sluggable": "^2.6"
+        "spatie/laravel-sluggable": "^2.6",
+        "laravel/nova": "3.*"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
